--- a/form1.html
+++ b/form1.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <title>2020 Proposal Form</title>
   <link rel="stylesheet" href="css/form.css" />
 </head>
+
 <body>
 
   <h1>2020 Proposal Form</h1>
@@ -47,13 +49,15 @@
         <label for="lecture">Lecture</label>
 
         <input type="radio" id="lab" name="presentation" value="lab" />
-        <label for="lab">Computer Lab:</label>
+        <label for="lab">Computer Lab</label>
       </p>
     </fieldset>
+
 
     <br />
     <button type="submit">Submit your proposal</button>
   </form>
 
 </body>
+
 </html>
